# gendiff

./: .gitignore  Makefile  README.md  file2.json  pyproject.toml  setup.cfg
.github/workflows/: hexlet-check.yml  pyci.yml
gendiff/: __init__.py  args_parser.py  build_tree.py  call_formatter.py  cli.py  converter.py  file_to_json.py  format_diff.py  formatter.py  generate_diff.py  loader.py  parser.py  select_formatter.py  to_json_converter.py  tree.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test.py  test_flat_files.py  test_gendiff.py  test_nested_files.py  test_nested_files_json.py  test_nested_files_plain.py
tests/fixtures/: 1_diff_json.txt  2_diff_yml.txt  3_nested_diff_json.txt  3_nested_diff_json_plain.txt  3_nested_input.json  3_nested_output.json  4_nested_diff_yml_json.txt  4_nested_diff_yml_plain.txt  diff_json.txt  diff_yml.txt  input.json
tests/fixtures/arg_files/: file1.json  file1.yml  file2.yml  nested1.yml  nested2.json  nested2.yml
tests/fixtures/expected_outputs/: default_for_flat.txt  default_for_nested.txt  json_for_nested.txt  plain_for_nested.txt
tests/fixtures/inputs/: nest_input.yml
tests/fixtures/outputs/: json_nest_json.txt  yml_nest_standard.txt
