[tool.poetry]
name = "hexlet-code"
# name = "n8creator_gendiff"
version = "0.1.6"
description = "Generate Difference Script allows you find the difference between two files in .json or .yaml/.yml formats"
authors = ["n8creator <n8creator@pm.me>"]
packages = [
  { include = "gendiff" },
]
repository = "https://github.com/n8creator/python-project-lvl2"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.6",
  "Environment :: Console",
  "Natural Language :: English",
  "Topic :: Utilities"
  ]

[tool.poetry.dependencies]
python = "^3.6"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
